# natasha2

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  blog.md  buildproto.sh
crystal/: CMakeLists.txt  crystal.h  game_crystal.h
games/: CMakeLists.txt  game_tlod.h
include/: array.h  config.h  csvfile.h  fortuna.h  game3x5.h  game5x3.h  gamecfg.h  gamecode.h  gamelogic.h  gamemod.h  gameresult.h  lines.h  logicline.h  logicline2.h  logicline3.h  logicscatter.h  logicscatter2.h  logicways.h  natasa.h  natasha.h  normalreels.h  paytables.h  reels.h  rtp.h  staticcascadingreels.h  staticcascadingreels3x5.h  symbolblock.h  symbolblock2.h  userinfo.h  utils.h
libfortuna/: CMakeLists.txt  fortuna.h  internal.h  px.h
museum/: CMakeLists.txt  basegame.h  freegame.h  game_museum.h  museum.cpp  museum.h
proto/: base.pb.cc  base.pb.h  base.proto  crystal.proto  tlod.pb.cc  tlod.proto
protoc/: CMakeLists.txt  base.pb.cc  base.pb.h  tlod.pb.cc  tlod.pb.h
src/: CMakeLists.txt  config.cpp  csvfile.cpp  fortuna.cpp  game3x5.cpp  game5x3.cpp  gamelogic.cpp  gamemod.cpp  staticcascadingreels3x5.cpp  symbolblock2.cpp  tlod.pb.h  utils.cpp
test/: test.cpp
tlod/: CMakeLists.txt  basegame.h  freegame.h  game_tlod.h  tlod.cpp  tlod.h  tlodcfg.cpp
